--- a/nav-app/src/app/sidebar/sidebar.component.scss
+++ b/nav-app/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,4 @@
 .sidebar {
-    width: 36em;
+    width: 38em;
     padding: 16px;
 }
